crates/bubbletea-macros/tests/ui/fail/tuple_struct_not_supported.rs
//! Test that derive(Model) fails on tuple structs.

use bubbletea::Model;

#[derive(Model)]
struct TupleStruct(i32, String);

fn main() {}
